// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Apps/Punch Card Default 1`] = `
<div
  className="ms-Grid"
>
  <div
    className="ms-Grid-row"
  >
    <div
      className="ms-Grid-col ms-sm12 ms-md8 ms-lg8 ms-xl6"
    >
      <span
        className="css-62"
      >
        <h2>
          My Punch Card
        </h2>
      </span>
    </div>
  </div>
  <div
    className="ms-Grid-row"
  >
    <div
      className="ms-Grid-col ms-sm12 ms-md6"
    >
      <span
        className="css-62"
      >
        <h3>
          Goal For The Day
        </h3>
      </span>
      <div
        className="ms-Stack css-63"
      >
        <div
          className="ms-StackItem css-64"
        >
          <div
            className="ms-Stack css-65"
          >
            <div
              className="ms-TextField root-67"
            >
              <div
                className="ms-TextField-wrapper"
              >
                <label
                  className="ms-Label root-78"
                  htmlFor="TextField8"
                  id="TextFieldLabel10"
                >
                  Hours
                </label>
                <div
                  className="ms-TextField-fieldGroup fieldGroup-68"
                >
                  <input
                    aria-invalid={false}
                    aria-labelledby="TextFieldLabel10"
                    className="ms-TextField-field field-69"
                    id="TextField8"
                    max={24}
                    min={0}
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    onInput={[Function]}
                    type="number"
                    value="12"
                  />
                </div>
              </div>
            </div>
            <div
              className="ms-TextField root-67"
            >
              <div
                className="ms-TextField-wrapper"
              >
                <label
                  className="ms-Label root-78"
                  htmlFor="TextField11"
                  id="TextFieldLabel13"
                >
                  Minutes
                </label>
                <div
                  className="ms-TextField-fieldGroup fieldGroup-68"
                >
                  <input
                    aria-invalid={false}
                    aria-labelledby="TextFieldLabel13"
                    className="ms-TextField-field field-69"
                    id="TextField11"
                    max={59}
                    min={0}
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    onInput={[Function]}
                    type="number"
                    value="32"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="ms-StackItem css-64"
        >
          <div
            className="ms-MessageBar ms-MessageBar-multiline root-79"
          >
            <div
              className="ms-MessageBar-content content-80"
            >
              <div
                aria-hidden={true}
                className="ms-MessageBar-icon iconContainer-81"
              >
                <i
                  aria-hidden={true}
                  className="icon-89"
                  data-icon-name="Info"
                >
                  
                </i>
              </div>
              <div
                aria-live="polite"
                className="ms-MessageBar-text text-83"
                id="MessageBar14"
                role="status"
              >
                <span
                  className="ms-MessageBar-innerText innerText-84"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <br />
  <div
    className="ms-Grid-row"
  >
    <div
      className="ms-Grid-col ms-sm-12 ms-md6"
    >
      <div
        className="ms-Stack css-90"
      >
        <div
          className="ms-StackItem css-64"
        >
          <button
            className="ms-Button ms-Button--primary root-91"
            data-is-focusable={true}
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            type="button"
          >
            <span
              className="ms-Button-flexContainer flexContainer-92"
              data-automationid="splitbuttonprimary"
            >
              <i
                aria-hidden={true}
                className="ms-Icon root-37 css-97 ms-Button-icon icon-94"
                data-icon-name="Clock"
                role="presentation"
                style={
                  Object {
                    "fontFamily": "\\"FabricMDL2Icons-2\\"",
                  }
                }
              >
                
              </i>
              <span
                className="ms-Button-textContainer textContainer-93"
              >
                <span
                  className="ms-Button-label label-95"
                  id="id__15"
                >
                  Add Scheduled Slot
                </span>
              </span>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Apps/Punch Card With Hook 1`] = `
<div>
  <div
    className="ms-Stack css-98"
  >
    <div
      className="ms-StackItem css-64"
    >
      <form
        onSubmit={[Function]}
      >
        <div
          className="ms-Stack css-98"
        >
          <div
            className="ms-TextField root-99"
          >
            <div
              className="ms-TextField-wrapper"
            >
              <div
                className="ms-TextField-fieldGroup fieldGroup-68"
              >
                <input
                  aria-invalid={false}
                  className="ms-TextField-field field-69"
                  id="TextField18"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  onInput={[Function]}
                  placeholder="Punch Card Title..."
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
          <button
            aria-disabled={true}
            className="ms-Button ms-Button--icon is-disabled ms-hiddenMdUp root-100"
            data-is-focusable={false}
            disabled={true}
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            title="Add Punch Card"
            type="submit"
          >
            <span
              className="ms-Button-flexContainer flexContainer-92"
              data-automationid="splitbuttonprimary"
            >
              <i
                aria-hidden={true}
                className="ms-Icon root-37 css-88 ms-Button-icon icon-101"
                data-icon-name="Add"
                role="presentation"
                style={
                  Object {
                    "fontFamily": "\\"FabricMDL2Icons\\"",
                  }
                }
              >
                
              </i>
            </span>
          </button>
          <button
            aria-disabled={true}
            className="ms-Button ms-Button--primary is-disabled ms-hiddenSm root-103"
            data-is-focusable={false}
            disabled={true}
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            title="Add Punch Card"
            type="submit"
          >
            <span
              className="ms-Button-flexContainer flexContainer-92"
              data-automationid="splitbuttonprimary"
            >
              <i
                aria-hidden={true}
                className="ms-Icon root-37 css-88 ms-Button-icon icon-101"
                data-icon-name="Add"
                role="presentation"
                style={
                  Object {
                    "fontFamily": "\\"FabricMDL2Icons\\"",
                  }
                }
              >
                
              </i>
              <span
                className="ms-Button-textContainer textContainer-93"
              >
                <span
                  className="ms-Button-label label-95"
                  id="id__24"
                >
                  Add Punch Card
                </span>
              </span>
            </span>
          </button>
        </div>
      </form>
    </div>
    <div
      className="ms-StackItem css-64"
    >
      <button
        aria-disabled={true}
        className="ms-Button ms-Button--icon is-disabled ms-hiddenMdUp root-100"
        data-is-focusable={false}
        disabled={true}
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        type="button"
      >
        <span
          className="ms-Button-flexContainer flexContainer-92"
          data-automationid="splitbuttonprimary"
        >
          <i
            aria-hidden={true}
            className="ms-Icon root-37 css-104 ms-Button-icon icon-101"
            data-icon-name="OpenPane"
            role="presentation"
            style={
              Object {
                "fontFamily": "\\"FabricMDL2Icons-1\\"",
              }
            }
          >
            
          </i>
          <span
            className="ms-Button-textContainer textContainer-93"
          />
        </span>
      </button>
      <button
        aria-disabled={true}
        className="ms-Button ms-Button--default is-disabled ms-hiddenSm root-105"
        data-is-focusable={false}
        disabled={true}
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        type="button"
      >
        <span
          className="ms-Button-flexContainer flexContainer-92"
          data-automationid="splitbuttonprimary"
        >
          <i
            aria-hidden={true}
            className="ms-Icon root-37 css-104 ms-Button-icon icon-101"
            data-icon-name="OpenPane"
            role="presentation"
            style={
              Object {
                "fontFamily": "\\"FabricMDL2Icons-1\\"",
              }
            }
          >
            
          </i>
          <span
            className="ms-Button-textContainer textContainer-93"
          >
            <span
              className="ms-Button-label label-95"
              id="id__30"
            >
              Show Punch Cards
            </span>
          </span>
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Custom Label - Variant A Default 1`] = `
<div
  className="ms-Stack css-106"
>
  <label
    className="ms-Label root-78"
  >
    Timestamp
  </label>
  <button
    className="ms-Button ms-Button--icon root-107"
    data-is-focusable={true}
    id="id__37"
    onClick={[Function]}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    title="Info"
    type="button"
  >
    <span
      className="ms-Button-flexContainer flexContainer-92"
      data-automationid="splitbuttonprimary"
    >
      <i
        aria-hidden={true}
        className="ms-Icon root-37 css-88 ms-Button-icon icon-94"
        data-icon-name="Info"
        role="presentation"
        style={
          Object {
            "fontFamily": "\\"FabricMDL2Icons\\"",
          }
        }
      >
        
      </i>
    </span>
  </button>
</div>
`;

exports[`Storyshots Components/Custom Label Default 1`] = `
<div
  className="ms-Stack css-106"
>
  <label
    className="ms-Label root-78"
  >
    Timestamp
  </label>
  <button
    className="ms-Button ms-Button--icon root-107"
    data-is-focusable={true}
    id="my-callout"
    onClick={[Function]}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    title="Info"
    type="button"
  >
    <span
      className="ms-Button-flexContainer flexContainer-92"
      data-automationid="splitbuttonprimary"
    >
      <i
        aria-hidden={true}
        className="ms-Icon root-37 css-88 ms-Button-icon icon-94"
        data-icon-name="Info"
        role="presentation"
        style={
          Object {
            "fontFamily": "\\"FabricMDL2Icons\\"",
          }
        }
      >
        
      </i>
    </span>
  </button>
</div>
`;

exports[`Storyshots Components/Simple Form Default 1`] = `
<form
  onSubmit={[Function]}
>
  <div
    className="ms-Stack css-98"
  >
    <div
      className="ms-TextField root-99"
    >
      <div
        className="ms-TextField-wrapper"
      >
        <div
          className="ms-TextField-fieldGroup fieldGroup-68"
        >
          <input
            aria-invalid={false}
            className="ms-TextField-field field-69"
            id="TextField41"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onInput={[Function]}
            placeholder="Punch Card Name..."
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
    <button
      className="ms-Button ms-Button--icon ms-hiddenMdUp root-108"
      data-is-focusable={true}
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      title="Add Punch Card"
      type="submit"
    >
      <span
        className="ms-Button-flexContainer flexContainer-92"
        data-automationid="splitbuttonprimary"
      >
        <i
          aria-hidden={true}
          className="ms-Icon root-37 css-88 ms-Button-icon icon-94"
          data-icon-name="Add"
          role="presentation"
          style={
            Object {
              "fontFamily": "\\"FabricMDL2Icons\\"",
            }
          }
        >
          
        </i>
      </span>
    </button>
    <button
      className="ms-Button ms-Button--primary ms-hiddenSm root-91"
      data-is-focusable={true}
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      title="Add Punch Card"
      type="submit"
    >
      <span
        className="ms-Button-flexContainer flexContainer-92"
        data-automationid="splitbuttonprimary"
      >
        <i
          aria-hidden={true}
          className="ms-Icon root-37 css-88 ms-Button-icon icon-94"
          data-icon-name="Add"
          role="presentation"
          style={
            Object {
              "fontFamily": "\\"FabricMDL2Icons\\"",
            }
          }
        >
          
        </i>
        <span
          className="ms-Button-textContainer textContainer-93"
        >
          <span
            className="ms-Button-label label-95"
            id="id__47"
          >
            Add Punch Card
          </span>
        </span>
      </span>
    </button>
  </div>
</form>
`;

exports[`Storyshots POCs/Test Pivot Test 1`] = `
<div
  className="ms-Stack css-43"
>
  <div
    aria-label="Basic Pivot Example"
    className="ms-depth-8"
    role="toolbar"
  >
    <div
      className="ms-FocusZone css-51 ms-Pivot root-44"
      data-focuszone-id="FocusZone1"
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseDownCapture={[Function]}
      role="tablist"
    >
      <button
        aria-selected={true}
        className="ms-Button ms-Button--action ms-Button--command ms-Pivot-link is-selected linkIsSelected-52"
        data-content="Convert 2 Timestamp"
        data-is-focusable={true}
        data-order={1}
        data-title="My Files Title"
        id="Pivot0-Tab0"
        name="Convert 2 Timestamp"
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        role="tab"
        type="button"
      >
        <span
          className="ms-Button-flexContainer flexContainer-53"
          data-automationid="splitbuttonprimary"
        >
          <span
            className="ms-Pivot-linkContent linkContent-48"
          >
            <span
              className="ms-Pivot-text text-49"
            >
               
              Convert 2 Timestamp
            </span>
          </span>
        </span>
      </button>
      <button
        aria-selected={false}
        className="ms-Button ms-Button--action ms-Button--command ms-Pivot-link link-60"
        data-content="Convert 2 Date"
        data-is-focusable={true}
        id="Pivot0-Tab1"
        name="Convert 2 Date"
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        role="tab"
        type="button"
      >
        <span
          className="ms-Button-flexContainer flexContainer-53"
          data-automationid="splitbuttonprimary"
        >
          <span
            className="ms-Pivot-linkContent linkContent-48"
          >
            <span
              className="ms-Pivot-text text-49"
            >
               
              Convert 2 Date
            </span>
          </span>
        </span>
      </button>
    </div>
    <div
      aria-hidden={false}
      aria-labelledby="Pivot0-Tab0"
      className="itemContainer-45"
      hidden={false}
      role="tabpanel"
    >
      <div>
        <div
          className="ms-Stack css-43"
        >
          <span
            className="css-61"
          >
            Convert 2 Timestamp
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;
